sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:21: error: illegal start of simple expression
    } while (swapped && end-begin>1);
    ^